Update CI to deploy to Pages

--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -32,3 +32,7 @@ jobs:
       with:
         name: dist
         path: dist/
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: dist
