--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -15,12 +15,6 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14' # Specify the Node.js version you need
-
     - name: Install Dependencies
       run: npm install
 
@@ -36,3 +30,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: dist
+
+permissions:
+  contents: write
