fuck all automagic bullshit

--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -21,15 +21,30 @@ jobs:
     - name: Build Project
       run: npm run build
 
-    - name: Archive Production Artifacts
-      uses: actions/upload-artifact@v2
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        name: dist
-        path: dist/
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: dist
+        path: 'dist/'
+  deploy:
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
+
 
 permissions:
   contents: write
