--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "strict": "off"
+    }
   },
   "browserslist": [
     "> 1%",
